--- a/src/components/MultiSelectAutoComplete/SelectedItems/index.module.css
+++ b/src/components/MultiSelectAutoComplete/SelectedItems/index.module.css
@@ -5,6 +5,9 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 5px;
+  max-height: 200px;
+  overflow-y: auto; 
+  transition: max-height 0.3s ease; 
 }
 
 .selectedItem {
@@ -29,4 +32,16 @@
   border-radius: 3px;
   color: white;
   cursor: pointer;
+}
+
+
+.toggleExpandBtn {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  text-align: center;
+  cursor: pointer;
+  margin-top: 10px;
 }
