style: Add styling changes to DropdownItem and MultiSelectAutoComplete components

--- a/src/components/MultiSelectAutoComplete/DropdownItem/index.module.css
+++ b/src/components/MultiSelectAutoComplete/DropdownItem/index.module.css
@@ -12,6 +12,10 @@
   align-items: center;
 }
 
+.dropdownItemInfoWrapper {
+  text-align: left;
+}
+
 .dropdownItems:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
