--- a/src/components/MultiSelectAutoComplete/index.module.css
+++ b/src/components/MultiSelectAutoComplete/index.module.css
@@ -2,6 +2,8 @@
   position: relative;
   width: 100%;
   max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
