--- a/src/assets/styles/style.module.css
+++ b/src/assets/styles/style.module.css
@@ -5,11 +5,43 @@ body {
   background-color: #f5f5f5;
 }
 
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
   width: 100%;
-  margin-top: 2rem;
+}
+
+@media (min-width: 600px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+.homepage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    margin-top: 2rem;
 }
