--- a/src/components/MultiSelectAutoComplete/DropdownItem/index.module.css
+++ b/src/components/MultiSelectAutoComplete/DropdownItem/index.module.css
@@ -61,3 +61,8 @@
   background-color: transparent;
   cursor: pointer;
 }
+
+.focused {
+  background-color: #f0f0f0;
+  outline: 2px solid black;
+}
