--- a/src/components/MultiSelectAutoComplete/SelectedItems/index.module.css
+++ b/src/components/MultiSelectAutoComplete/SelectedItems/index.module.css
@@ -1,47 +1,60 @@
 .selectedItems {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 5px;
-  max-height: 200px;
-  overflow-y: auto; 
-  transition: max-height 0.3s ease; 
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    max-height: 200px;
+    overflow-y: auto;
+    transition: max-height 0.3s ease;
+}
+
+.selectedItemsCount {
+    font-size: 16px;
+    color: #475669;
+    margin-bottom: 5px;
+    padding: 0;
+}
+
+.selectedItemsCount mark {
+    font-size: 14px;
+    font-weight: bold;
+    background-color: transparent;
+    color: #475669;
 }
 
 .selectedItem {
-  background-color: #e3e8f1;
-  color: #334255;
-  padding: 6px 10px;
-  border-radius: 3px;
-  margin: 2px;
-  border-radius: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 5px;
+    background-color: #e3e8f1;
+    color: #334255;
+    padding: 6px 10px;
+    margin: 2px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
 }
 
 .removeItem {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #94a4b8;
-  border: none;
-  border-radius: 3px;
-  color: white;
-  cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #94a4b8;
+    border: none;
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
 }
 
 
 .toggleExpandBtn {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  background-color: #f9f9f9;
-  text-align: center;
-  cursor: pointer;
-  margin-top: 10px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    text-align: center;
+    cursor: pointer;
+    margin-top: 10px;
 }
